examples/test/testpolicy5720.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5720
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key13: value47
      key25: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
      podSelector:
        matchLabels:
          key9: value2
          key17: value20
